--- a/src/plugin-api/main/uk/co/reecedunn/intellij/plugin/intellij/settings/QueryProcessorSettingsDialogUI.form
+++ b/src/plugin-api/main/uk/co/reecedunn/intellij/plugin/intellij/settings/QueryProcessorSettingsDialogUI.form
@@ -3,7 +3,7 @@
   <grid id="27dc6" binding="panel" layout-manager="GridLayoutManager" row-count="12" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="0" left="0" bottom="0" right="0"/>
     <constraints>
-      <xy x="20" y="20" width="500" height="400"/>
+      <xy x="20" y="20" width="785" height="400"/>
     </constraints>
     <properties/>
     <border type="none"/>
@@ -13,7 +13,7 @@
           <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
-          <text resource-bundle="messages/XQueryBundle" key="xquery.settings.dialog.query-processor.name.label"/>
+          <text resource-bundle="messages/PluginApiBundle" key="xquery.settings.dialog.query-processor.name.label"/>
         </properties>
       </component>
       <vspacer id="88634">
@@ -35,7 +35,7 @@
           <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
-          <text resource-bundle="messages/XQueryBundle" key="xquery.settings.dialog.query-processor.implementation.label"/>
+          <text resource-bundle="messages/PluginApiBundle" key="xquery.settings.dialog.query-processor.implementation.label"/>
         </properties>
       </component>
       <component id="bc15f" class="javax.swing.JComboBox" binding="api" custom-create="true">
@@ -49,7 +49,7 @@
           <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
-          <text resource-bundle="messages/XQueryBundle" key="xquery.settings.dialog.query-processor.api-jar.label"/>
+          <text resource-bundle="messages/PluginApiBundle" key="xquery.settings.dialog.query-processor.api-jar.label"/>
         </properties>
       </component>
       <component id="fee21" class="com.intellij.openapi.ui.TextFieldWithBrowseButton" binding="jar" custom-create="true">
@@ -63,7 +63,7 @@
           <grid row="4" column="0" row-span="1" col-span="2" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
-          <text resource-bundle="messages/XQueryBundle" key="xquery.settings.dialog.query-processor.standalone.label"/>
+          <text resource-bundle="messages/PluginApiBundle" key="xquery.settings.dialog.query-processor.standalone.label"/>
         </properties>
       </component>
       <component id="bfdbe" class="javax.swing.JLabel">
@@ -71,7 +71,7 @@
           <grid row="5" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
-          <text resource-bundle="messages/XQueryBundle" key="xquery.settings.dialog.query-processor.hostname.label"/>
+          <text resource-bundle="messages/PluginApiBundle" key="xquery.settings.dialog.query-processor.hostname.label"/>
         </properties>
       </component>
       <component id="4234a" class="javax.swing.JTextField" binding="hostname" custom-create="true">
@@ -87,7 +87,7 @@
           <grid row="6" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
-          <text resource-bundle="messages/XQueryBundle" key="xquery.settings.dialog.query-processor.database-port.label"/>
+          <text resource-bundle="messages/PluginApiBundle" key="xquery.settings.dialog.query-processor.database-port.label"/>
         </properties>
       </component>
       <component id="5ee06" class="javax.swing.JTextField" binding="databasePort" custom-create="true">
@@ -103,7 +103,7 @@
           <grid row="8" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
-          <text resource-bundle="messages/XQueryBundle" key="xquery.settings.dialog.query-processor.username.label"/>
+          <text resource-bundle="messages/PluginApiBundle" key="xquery.settings.dialog.query-processor.username.label"/>
         </properties>
       </component>
       <component id="94763" class="javax.swing.JTextField" binding="username" custom-create="true">
@@ -119,7 +119,7 @@
           <grid row="9" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
-          <text resource-bundle="messages/XQueryBundle" key="xquery.settings.dialog.query-processor.password.label"/>
+          <text resource-bundle="messages/PluginApiBundle" key="xquery.settings.dialog.query-processor.password.label"/>
         </properties>
       </component>
       <component id="3de1a" class="javax.swing.JPasswordField" binding="password" custom-create="true">
@@ -135,7 +135,7 @@
           <grid row="7" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
-          <text resource-bundle="messages/XQueryBundle" key="xquery.settings.dialog.query-processor.admin-port.label"/>
+          <text resource-bundle="messages/PluginApiBundle" key="xquery.settings.dialog.query-processor.admin-port.label"/>
         </properties>
       </component>
       <component id="b5661" class="javax.swing.JTextField" binding="adminPort" custom-create="true">
@@ -151,7 +151,7 @@
           <grid row="3" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
-          <text resource-bundle="messages/XQueryBundle" key="xquery.settings.dialog.query-processor.config-path.label"/>
+          <text resource-bundle="messages/PluginApiBundle" key="xquery.settings.dialog.query-processor.config-path.label"/>
         </properties>
       </component>
       <component id="475eb" class="com.intellij.openapi.ui.TextFieldWithBrowseButton" binding="configuration" custom-create="true">
