--- a/src/plugin-api/main/uk/co/reecedunn/intellij/plugin/intellij/execution/configurations/QueryProcessorDataSourceUI.form
+++ b/src/plugin-api/main/uk/co/reecedunn/intellij/plugin/intellij/execution/configurations/QueryProcessorDataSourceUI.form
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="uk.co.reecedunn.intellij.plugin.intellij.execution.configurations.QueryProcessorDataSource">
-  <grid id="27dc6" binding="panel" layout-manager="GridLayoutManager" row-count="2" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="0">
+  <grid id="27dc6" binding="panel" layout-manager="GridLayoutManager" row-count="3" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="0">
     <margin top="0" left="0" bottom="0" right="0"/>
     <constraints>
       <xy x="20" y="20" width="500" height="400"/>
@@ -10,24 +10,32 @@
     <children>
       <vspacer id="5bfd7">
         <constraints>
-          <grid row="1" column="0" row-span="1" col-span="2" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
+          <grid row="2" column="0" row-span="1" col-span="2" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
         </constraints>
       </vspacer>
-      <component id="55968" class="javax.swing.JLabel">
+      <component id="bab" class="javax.swing.JRadioButton" binding="localFileType">
         <constraints>
           <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false">
             <preferred-size width="87" height="16"/>
           </grid>
         </constraints>
         <properties>
-          <text resource-bundle="messages/PluginApiBundle" key="xquery.configurations.processor.script-file.label"/>
+          <text resource-bundle="messages/PluginApiBundle" key="xquery.configurations.data-source.local-file.label"/>
         </properties>
       </component>
-      <component id="3151a" class="com.intellij.openapi.ui.TextFieldWithBrowseButton" binding="scriptFile" custom-create="true">
+      <component id="3151a" class="com.intellij.openapi.ui.TextFieldWithBrowseButton" binding="localFilePath">
         <constraints>
           <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties/>
+      </component>
+      <component id="600bd" class="javax.swing.JRadioButton" binding="activeEditorFileType">
+        <constraints>
+          <grid row="1" column="0" row-span="1" col-span="2" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties>
+          <text resource-bundle="messages/PluginApiBundle" key="xquery.configurations.data-source.active-editor-file.label"/>
+        </properties>
       </component>
     </children>
   </grid>
